--- a/Message Sender/main.css
+++ b/Message Sender/main.css
@@ -3,10 +3,11 @@ body{
     display:flex;
     align-items: center;
     justify-content: center;
-    background: #88d5e9;
+    background: rgb(110, 110, 110);
     color:#333;
     font-family: "calibri";
-    font-weight: 400;;
+    font-weight: 400;
+    text-transform: capitalize;
 }
 #container{
     text-align: center;
@@ -44,7 +45,7 @@ button:hover{
         box-shadow: 0 0 10px #88d5e9;
     }
 
-    #messageOut{
+    #messageOutput{
         margin:0.5rem 0;
         color:#88d5e9;
     }
